<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.MobileBanking.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/widgets_container"
    android:orientation="vertical"
    android:background="@drawable/shape_card_root"
    android:theme="@style/Theme.MobileBanking.AppWidgetContainer">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pnfont_semibold"
            android:text="@string/paynet_carta"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pnfont_semibold"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center|end"
            android:textSize="16sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_refresh"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_refresh"
            android:layout_gravity="center|end"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_paynet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pnfont_semibold"
                android:text="@string/paynet_carta"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_card_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pnfont_semibold"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pnfont_semibold"
                    android:text="so'm"
                    android:layout_marginStart="4dp"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="116dp"
        android:orientation="vertical"
        android:elevation="1dp"
        android:background="@drawable/card_shape"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/card_shape"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:elevation="1dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/usa_flag"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_usd"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/text_usd"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/teal_700"
                    android:gravity="center|top"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.8"
                    android:text="@string/som"
                    android:textStyle="bold"
                    android:textColor="#0CB612"
                    android:gravity="center|top"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/card_shape"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:elevation="1dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ue_flag"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_eur"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/text_eur"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/teal_700"
                    android:gravity="center|top"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.8"
                    android:text="@string/som"
                    android:textStyle="bold"
                    android:textColor="#0CB612"
                    android:gravity="center|top"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/card_shape"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:elevation="1dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_russion_rubl"
                        android:layout_gravity="center_vertical"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_rub"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/text_rub"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/teal_700"
                    android:gravity="center|top"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.8"
                    android:text="@string/som"
                    android:textStyle="bold"
                    android:textColor="#0CB612"
                    android:gravity="center|top"
                    android:textSize="16sp"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>